add scalafmt plugin and sbt resolver to reload faster the app add java version and java 19 check in sbt